modify index.html and add about/index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My first Document</title>
+</head>
+<body>
+<header>  <h1>Моя первая страница</h1> </header>
+<main>
+     <p> <a href="about/index.html"> Об авторе</a></p>
+</main>
+</body>
+</html>
