modify index.html add image,list,table and form

--- a/about/index.html
+++ b/about/index.html
@@ -26,9 +26,8 @@
        <li> умею работать в команде.</li> </ul>
    </section>
 </main>
-
 <footer>
-<hr><a href="https://github.com/lolitamalinovskaya">Github profile</a><br>
+<hr><a href="https://github.com/lolitamalinovskaya" target="">Github profile</a><br>
     <a href="mailto:https://lolimalinovskaya@gmail.com">Send me an email</a>
 </footer>
 </body>
