--- a/index.html
+++ b/index.html
@@ -5,66 +5,85 @@
     <title>My first Document</title>
 </head>
 <body>
-<header>  <h1>Моя первая страница</h1> </header>
+<header><h1>Моя первая страница</h1></header>
 <main>
-     <p> <a href="about/index.html"> Об авторе</a></p>
-<hr>
-<section><h2>Мой путь front-end &#9889</h2>
-    <p>Привет, меня зовут Лолита. Я учусь в школе Intellect-Fox. Осваиваю направление Front-end разработки.&#11088</p>
-    <p> Front-end я выбрала, потомучто я могу сразу увидеть результат моих действий на примере.&#9728 Мне нравится работать
-        с визуалом и понимать, как именно устроено внешнее оформление сайтов. </p>
-    <p> Я считаю front-end перспективным направлением для дальнейшей работы, а также безграничным источником для развития
-        своих способностей.</p>
-    <p> Конечно, мне неловко, что я начинаю свой путь с <sub>нуля</sub>, хотя у многих ребят есть <sup>знания и навыки</sup>.
-        Иногда мелькает мысль,<del> что я stupid </del>&#128511,<br>
-        но все это быстро проходит, когда я понимаю, что не знать чего-то - не стыдно, и учиться - не стыдно, и стремиться
-        &#8663 - не стыдно. </p>
-    <p> <strong>В моем сердце живет надежда, что я стану граммотным специалистом в этой области и найду работу в хорошей
-        компании. &#128151</strong></p>
-</section>
+    <p><a href="about/index.html"> Об авторе</a></p>
+    <hr>
+    <section><h2>Мой путь front-end &#9889</h2>
+        <p>Привет, меня зовут Лолита. Я учусь в школе Intellect-Fox. Осваиваю направление Front-end
+            разработки.&#11088</p>
+        <p> Front-end я выбрала, потомучто я могу сразу увидеть результат моих действий на примере.&#9728 Мне нравится
+            работать
+            с визуалом и понимать, как именно устроено внешнее оформление сайтов. </p>
+        <p> Я считаю front-end перспективным направлением для дальнейшей работы, а также безграничным источником для
+            развития
+            своих способностей.</p>
+        <p> Конечно, мне неловко, что я начинаю свой путь с <sub>нуля</sub>, хотя у многих ребят есть <sup>знания и
+            навыки</sup>.
+            Иногда мелькает мысль,
+            <del> что я stupid</del>
+            &#128511,<br>
+            но все это быстро проходит, когда я понимаю, что не знать чего-то - не стыдно, и учиться - не стыдно, и
+            стремиться
+            &#8663 - не стыдно.
+        </p>
+        <p><strong>В моем сердце живет надежда, что я стану граммотным специалистом в этой области и найду работу в
+            хорошей
+            компании. &#128151</strong></p>
+    </section>
     <img src="https://wallpapercave.com/wp/wp4575160.jpg" alt="cat in space"/>
     <section>
         <h3>Краткий план действий</h3>
         <ol>
             <li>Знакомство с Web
-            <ul> <li> Краткая история Web и что такое интернет</li>
-            <li> Как устроен браузер и как он получает данные из сети</li>
-            <li> Что такое Git? </li>
-            <li> Создание первого репозитория</li>
-            <li> О файле .gitignore</li></ul></li>
-        <li> HTML-верстка - первые шаги
-        <ul> <li> Настройка рабочей среды</li>
-        <li> Краткая история HTML</li>
-        <li> Какие бывают теги и что такое атрибут</li>
-        <li> Теги для работы с текстом</li>
-        <li> Создание собственной страницы</li></ul></li>
-        <li> Погружение в HTML-разметку
-        <ul> <li> Мета-теги</li>
-        <li> Мнемоники </li>
-        <li> Тег для работы с изображениями </li>
-        <li> Теги для работы со списками </li>
-        <li> Теги для работы с таблицами </li>
-        <li> Теги для работы с формами</li>
-            <li> Div-блоки </li> </ul></li></ol>
+                <ul>
+                    <li> Краткая история Web и что такое интернет</li>
+                    <li> Как устроен браузер и как он получает данные из сети</li>
+                    <li> Что такое Git?</li>
+                    <li> Создание первого репозитория</li>
+                    <li> О файле .gitignore</li>
+                </ul>
+            </li>
+            <li> HTML-верстка - первые шаги
+                <ul>
+                    <li> Настройка рабочей среды</li>
+                    <li> Краткая история HTML</li>
+                    <li> Какие бывают теги и что такое атрибут</li>
+                    <li> Теги для работы с текстом</li>
+                    <li> Создание собственной страницы</li>
+                </ul>
+            </li>
+            <li> Погружение в HTML-разметку
+                <ul>
+                    <li> Мета-теги</li>
+                    <li> Мнемоники</li>
+                    <li> Тег для работы с изображениями</li>
+                    <li> Теги для работы со списками</li>
+                    <li> Теги для работы с таблицами</li>
+                    <li> Теги для работы с формами</li>
+                    <li> Div-блоки</li>
+                </ul>
+            </li>
+        </ol>
     </section>
     <section>
         <table border="1" width="100%">
             <caption>Table's tags and descriptions</caption>
-        <tr>
-        <th> Tag </th>
-            <th> Description </th>
-        </tr>
-        <tr>
-        <td> &lt;table&gt;</td>
-        <td> Defines a table </td>
-        </tr>
             <tr>
-        <td> &lt;tr&gt;</td>
-        <td> Defines a row in a table</td>
-        </tr>
+                <th> Tag</th>
+                <th> Description</th>
+            </tr>
+            <tr>
+                <td> &lt;table&gt;</td>
+                <td> Defines a table</td>
+            </tr>
+            <tr>
+                <td> &lt;tr&gt;</td>
+                <td> Defines a row in a table</td>
+            </tr>
             <tr>
                 <td> &lt;th&gt;</td>
-                <td rowspan="2"> Defines a "header cell"/"cell" in a table </td>
+                <td rowspan="2"> Defines a "header cell"/"cell" in a table</td>
             </tr>
             <tr>
                 <td> &lt;td&gt;</td>
@@ -91,55 +110,57 @@
         </table>
     </section>
     <section>
-       <H3>Fill out the form</H3>
+        <H3>Fill out the form</H3>
         <form action="/" method="get">
-            <fieldset><legend>My first form</legend>
-<div>
-        <label for="name">Name</label><br>
-            <input id="name" type="text" placeholder="name" required/><br/>
-</div>
-            <div><label for="email">Email</label><br>
-            <input id="email" type="email" required/><br/>
-            </div>
-            <div>
-            <label for="password">Password</label><br>
-            <input id="password" type="password" name="password" required/><br/>
-            </div>
-<div>
-    <label for="Your programming level"> Your programming level</label> <br/>
-            <input id="Your programming level" type="range" max="10" min="1"/><br/>
-</div>
-            <div>
-                <p>What does HTML stand for?</p>
+            <fieldset>
+                <legend>My first form</legend>
+                <div>
+                    <label for="name">Name</label><br>
+                    <input id="name" type="text" placeholder="name" required/><br/>
+                </div>
+                <div><label for="email">Email</label><br>
+                    <input id="email" type="email" required/><br/>
+                </div>
+                <div>
+                    <label for="password">Password</label><br>
+                    <input id="password" type="password" name="password" required/><br/>
+                </div>
+                <div>
+                    <label for="Your programming level"> Your programming level</label> <br/>
+                    <input id="Your programming level" type="range" max="10" min="1"/><br/>
+                </div>
+                <div>
+                    <p>What does HTML stand for?</p>
 
-            <input id="check1" type="checkbox" name=gr1>
-                <label for="check1"> Hyperlinks and Text Markup Language </label><br>
-                <input id="check2" type="checkbox" name="gr1">
-                <label for="check2"> Home tool Markup Language </label><br>
-                <input id="check3" type="checkbox" name="gr1">
-                <label for="check3"> Hyper Text Markup Language </label><br>
-            </div>
-<div>
-    <p> What does HTTP stand for?</p>
-<input id="radio1" type="radio" name="gr2">
-    <label for="radio1">Hyper Text Translate Protocol</label><br>
-    <input id="radio2" type="radio" name="gr2">
-    <label for="radio2"> Hyper Text Transmission Protocol</label><br>
-    <input id="radio3" type="radio" name="gr2">
-    <label for="radio3"> Hyper Text Transfer Protocol</label><br>
-</div>
-        <div>
-            <label for="comment">Comment</label><br>
-            <textarea placeholder="comment" id="comment" maxlength="500"></textarea>
-        </div>
+                    <input id="check1" type="checkbox" name=gr1>
+                    <label for="check1"> Hyperlinks and Text Markup Language </label><br>
+                    <input id="check2" type="checkbox" name="gr1">
+                    <label for="check2"> Home tool Markup Language </label><br>
+                    <input id="check3" type="checkbox" name="gr1">
+                    <label for="check3"> Hyper Text Markup Language </label><br>
+                </div>
+                <div>
+                    <p> What does HTTP stand for?</p>
+                    <input id="radio1" type="radio" name="gr2">
+                    <label for="radio1">Hyper Text Translate Protocol</label><br>
+                    <input id="radio2" type="radio" name="gr2">
+                    <label for="radio2"> Hyper Text Transmission Protocol</label><br>
+                    <input id="radio3" type="radio" name="gr2">
+                    <label for="radio3"> Hyper Text Transfer Protocol</label><br>
+                </div>
+                <div>
+                    <label for="comment">Comment</label><br>
+                    <textarea placeholder="comment" id="comment" maxlength="500"></textarea>
+                </div>
                 <div>
                     <label for="select">What does HTML stand for?</label><br>
                     <select id="select" name="select">
-                    <option selected>Your answer</option>
+                        <option selected>Your answer</option>
                     </select>
                 </div>
                 <div>
-                   <br> <button type="submit">Send</button>
+                    <br>
+                    <button type="submit">Send</button>
                 </div>
             </fieldset>
         </form>
