--- a/index.html
+++ b/index.html
@@ -6,19 +6,56 @@
     <link href="Style.css" rel="stylesheet">
 </head>
 <body>
-<h1> What do we offer</h1>
-<hr>
-<div class="icons">
-    <img src="images/support.svg" alt="headphones">
-    <img src="images/communicate_directly.svg" alt="dialog window">
-    <img src="images/book_online.svg" alt="book online">
-    <img src="images/real_guest_reviews.svg" alt="like">
-</div>
-<div class="titles">
-    <p> Support 24/7</p>
-    <p> Communicate directly</p>
-    <p> Book online</p>
-    <p> Real guest reviews</p>
-</div>
+<section>
+    <header>
+        <h2> What do we offer</h2>
+        <hr>
+    </header>
+    <main>
+        <div class="icons">
+            <img src="images/support.svg" alt="headphones">
+            <p> Support 24/7</p>
+        </div>
+        <div class="icons">
+            <img src="images/communicate_directly.svg" alt="dialog window">
+            <p> Communicate directly</p>
+        </div>
+        <div class="icons">
+            <img src="images/book_online.svg" alt="book online">
+            <p> Book online</p>
+        </div>
+        <div class="icons">
+            <img src="images/real_guest_reviews.svg" alt="like">
+            <p> Real guest reviews</p>
+        </div>
+    </main>
+</section>
+<footer>
+        <ul>
+            <li class="first"> About</li>
+            <li> How Triphouse works</li>
+            <li> Careers</li>
+            <li> Privacy</li>
+            <li> Terms</li>
+            <li class="logo"> &copy; 2020 Triphouse, Inc. All rights reserved</li>
+        </ul>
+
+        <ul>
+            <li class="first"> Property types</li>
+            <li> Guest houses</li>
+            <li> Hotels</li>
+            <li> Apartments</li>
+            <li> Villas</li>
+            <li> Holiday homes</li>
+            <li> Hostels</li>
+        </ul>
+
+        <ul>
+            <li class="first"> Support</li>
+            <li> Contact Customer Service</li>
+            <li> FAQ</li>
+        </ul>
+
+</footer>
 </body>
 </html>
