lesson 4,5 add container Nav in the footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 <section>
     <header>
-        <h2> What do we offer</h2>
+        <div class="heading120">
+            <h2> What do we offer</h2>
+        </div>
         <hr>
     </header>
     <main>
@@ -31,17 +33,16 @@
     </main>
 </section>
 <footer>
+    <nav>
         <ul>
-            <li class="first"> About</li>
+            <li class="heading_navigation"> About</li>
             <li> How Triphouse works</li>
             <li> Careers</li>
             <li> Privacy</li>
             <li> Terms</li>
-            <li class="logo"> &copy; 2020 Triphouse, Inc. All rights reserved</li>
         </ul>
-
         <ul>
-            <li class="first"> Property types</li>
+            <li class="heading_navigation"> Property types</li>
             <li> Guest houses</li>
             <li> Hotels</li>
             <li> Apartments</li>
@@ -49,13 +50,13 @@
             <li> Holiday homes</li>
             <li> Hostels</li>
         </ul>
-
         <ul>
-            <li class="first"> Support</li>
+            <li class="heading_navigation"> Support</li>
             <li> Contact Customer Service</li>
             <li> FAQ</li>
         </ul>
-
+    </nav>
+    <div class="copyright"> &copy; 2020 Triphouse, Inc. All rights reserved</div>
 </footer>
 </body>
 </html>
