--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+    <meta name="Viewport" content="width=device-width, initial-scale=1">
     <title>TripHouse</title>
     <link href="Style.css" rel="stylesheet">
 </head>
@@ -10,55 +11,58 @@
     <header class="top_section_header">
         <div class=" top_section_header_logo">
             <img src="images/logo_vector.svg" alt="Triphouse" class="Triphouse">
-            <p class="stays"> Stays </p><hr class="top_section_header_stays_hr">
-            <p class="attractions"> Attractions</p><hr class="top_section_header_attractions_hr">
-            <img src="images/Night.svg" alt="Night" class="night">
-            <img src="images/AccountCircle.svg" alt="AccountCircle" class="accountCircle">
+        </div>
+        <div class="top_section_header_stays_attractions_night_accountCircle">
+            <div class="top_section_header_stays_attractions">
+                <p class="stays"> Stays </p>
+                <p class="attractions"> Attractions</p>
+            </div>
+            <div class="top_section_header_night_accountCircle">
+                <img src="images/Night.svg" alt="Night" class="night">
+                <img src="images/AccountCircle.svg" alt="AccountCircle" class="accountCircle">
+            </div>
         </div>
     </header>
     <main class="top_section_main">
         <h1 class="discoverStays"> Discover stays <br> to live, work or just relax</h1>
-
-        <div class="top_section_main_all_form">
-            <div class="top_section_input_label">
-                <div class="top_section_input_label_for_destination">
-                    <label>Your destination or hotel name</label>
-                </div>
-                <div class="top_section_input_label_for_check_in">
-                    <label class="home-label-search" for="date">Check-in — Check-out</label>
-                </div>
-                <form class="top_section_input">
-                    <div>
-                        <input
-                                class="input-destination"
-                                id="city"
-                                type="text"
-                                name="destination"
-                                placeholder="Destination"
-                                value="New York">
-                    </div>
-                    <div class="input-destination">
-                        <input
-                                class="input-date"
-                                id="date"
-                                type="date"
-                                name="calendar"
-                                placeholder="Date">
-                    </div>
-                    <div class="input-destination">
-                        <label for="information_about_order"></label>
-                        <input
-                                class="input-room"
-                                id="information_about_order"
-                                type="text"
-                                name="room"
-                                value="2 Adults — 0 Children — 1 Room">
-                    </div>
-                    <div class="input-destination">
-                        <input class="input-button" type="submit" name="search" value="Search">
-                    </div>
-                </form>
+        <div class="top_section_main_general_label">
+            <div class="top_section_main_label_for_destination">
+                <label for="destination">Your destination or hotel name</label>
             </div>
+            <div class="top_section_main_label_for_check-in_check-out">
+                <label for="check-in">Check-in -</label>
+                <label for="check-out">Check-out</label>
+            </div>
+        </div>
+        <div class="top_section_main_form_background">
+            <form class="top_section_main_form">
+
+                <input
+                        id="destination"
+                        type="text"
+                        name="destination"
+                        placeholder="New York">
+                <div id="top_section_main_input_for_check-in_check-out">
+                    <input
+                            id="check-in"
+                            type="date"
+                            name="calendar"
+                            placeholder="Tue 15 Sept — ">
+                    <input
+                            id="check-out"
+                            type="date"
+                            name="calendar"
+                            placeholder="Sat 19 Sept">
+                </div>
+
+                <label for="information_about_order"></label>
+                <input
+                        id="information_about_order"
+                        type="text"
+                        name="room"
+                        placeholder="2 Adults — 0 Children — 1 Room">
+                <input id="input-button" type="submit" name="search" value="Search">
+            </form>
         </div>
         <div class="top_section_main_AppStore_GooglePlay">
             <img src="images/google-play-badge.svg" alt="GooglePlay">
