lesson 6 I fixed some mistakes on lesson

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <label for="check-out">Check-out</label>
             </div>
         </div>
-        <div class="top_section_main_form_background">
+        <div>
             <form class="top_section_main_form">
 
                 <input
