lesson-8 please look at this

--- a/index.html
+++ b/index.html
@@ -199,10 +199,27 @@
     <symbol id="top_section_menu" viewBox="0 0 24 16">
         <path d="M0 16H24V13.3333H0V16ZM0 9.33333H24V6.66667H0V9.33333ZM0 0V2.66667H24V0H0Z" fill="white"/>
     </symbol>
+    <symbol id="arrows_right" viewBox="0 0 48 48">
+        <g filter="url(#filter0_d)">
+            <circle cx="24" cy="20" r="20" fill="#F3F3F4"/>
+            <path d="M19.9412 29.8235L26.1 21.6118C26.6333 20.9007 26.6333 19.9229 26.1 19.2118L19.9412 11" stroke="#383838" stroke-width="2"/>
+        </g>
+        <defs>
+            <filter id="filter0_d" x="0" y="0" width="48" height="48" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+                <feOffset dy="4"/>
+                <feGaussianBlur stdDeviation="2"/>
+                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+            </filter>
+        </defs>
+    </symbol>
 </svg>
 <div class="top_section">
     <section class="top_section_conteiner">
-        <header class="top_section_header col-12 col-md-6">
+        <header class="top_section_header col-14 col-md-6">
             <div class="top_section_header_logo">
                 <svg class="logo_trip_house">
                     <use href="#logo_trip_house"/>
@@ -237,8 +254,8 @@
                     <label for="check-out">Check-out</label>
                 </div>
             </div>
-            <div class="top_section_all_form col-12 col-md-6">
-                <form class="top_section_main_form col-12 col-md-6">
+            <div class="top_section_all_form col-14 col-md-6">
+                <form class="top_section_main_form col-14 col-md-6">
 
                     <input
                             id="destination"
@@ -281,11 +298,10 @@
         </main>
     </section>
 </div>
-
 <section class="section_what_do_we_offer">
     <div class="what_do_we_offer_conteiner">
         <header class="what_do_we_offer_header_heading120">
-            <h2 class="what_do_we_offer_header_h2 col-4 col-md-4"> What do we offer</h2>
+            <h2 class="what_do_we_offer_header_h2 col-md-4"> What do we offer</h2>
         </header>
         <main class="what_do_we_offer_main">
             <div class="what_do_we_offer_main_icons col-3 col-md-6">
@@ -330,7 +346,7 @@
                 <li class="footer_navigation_list"> Privacy</li>
                 <li class="footer_navigation_list"> Terms</li>
             </ul>
-            <ul class="col-4 col-md-4">
+            <ul class="col-4 col-md-3">
                 <li class="footer_navigation_heading"> Property types</li>
                 <li class="footer_navigation_list"> Guest houses</li>
                 <li class="footer_navigation_list"> Hotels</li>
