lesson-9 add section homes guests loves

--- a/index.html
+++ b/index.html
@@ -202,10 +202,12 @@
     <symbol id="arrows_right" viewBox="0 0 48 48">
         <g filter="url(#filter0_d)">
             <circle cx="24" cy="20" r="20" fill="#F3F3F4"/>
-            <path d="M19.9412 29.8235L26.1 21.6118C26.6333 20.9007 26.6333 19.9229 26.1 19.2118L19.9412 11" stroke="#383838" stroke-width="2"/>
+            <path d="M19.9412 29.8235L26.1 21.6118C26.6333 20.9007 26.6333 19.9229 26.1 19.2118L19.9412 11"
+                  stroke="#383838" stroke-width="2"/>
         </g>
         <defs>
-            <filter id="filter0_d" x="0" y="0" width="48" height="48" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <filter id="filter0_d" x="0" y="0" width="48" height="48" filterUnits="userSpaceOnUse"
+                    color-interpolation-filters="sRGB">
                 <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                 <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
                 <feOffset dy="4"/>
@@ -244,7 +246,7 @@
             </div>
         </header>
         <main class="top_section_main">
-            <h1 class="discoverStays col-8 col-md-6"> Discover stays <br> to live, work or just relax</h1>
+            <h1 class="discoverStays col-9 col-md-6"> Discover stays <br> to live, work or just relax</h1>
             <div class="top_section_main_general_label">
                 <div class="top_section_main_label_for_destination">
                     <label for="destination">Your destination or hotel name</label>
@@ -254,11 +256,9 @@
                     <label for="check-out">Check-out</label>
                 </div>
             </div>
-
             <div class="top_section_all_form col-14 col-md-6">
                 <form class="top_section_main_form col-14 col-md-6">
-        </div>
-        <div>
+
                     <input
                             id="destination"
                             type="text"
@@ -329,6 +329,56 @@
                     <use href="#like_real_guest_reviews"/>
                 </svg>
                 <p class="what_do_we_offer_main_iconsName"> Real guest reviews</p>
+            </div>
+        </main>
+    </div>
+</section>
+<section class="homes_guests_loves col-14">
+    <div class="homes_guests_loves_conteiner">
+        <header class="homes_guests_loves_header_heading120">
+            <h2 class="homes_guests_loves_header_h2 col-md-6">Homes guests loves</h2>
+        </header>
+        <main class="homes_guests_loves_main">
+            <figure class="hotel_leopold">
+                <img src="images/Hotel_Leopold.png">
+                <figcaption class="homes_guests_loves_main_name_hotel">
+                    Hotel Leopold
+                </figcaption>
+                <figcaption class="homes_guests_loves_main_name_place">
+                    Saint Petersburg, Russia
+                </figcaption>
+            </figure>
+            <figure class="appartment_sunshine">
+                <img src="images/Appartment_sunshine.png">
+                <figcaption class="homes_guests_loves_main_name_hotel">
+                    Appartment Sunshine
+                </figcaption>
+                <figcaption class="homes_guests_loves_main_name_place">
+                    Santa Cruz de Tenerife,<br> Spain
+                </figcaption>
+            </figure>
+            <figure class="villa_kunerad">
+                <img src="images/Villa_kunerad.png">
+                <figcaption class="homes_guests_loves_main_name_hotel">
+                    Villa Kunerad
+                </figcaption>
+                <figcaption class="homes_guests_loves_main_name_place">
+                    Vysokie Tatry, Slowakia
+                </figcaption>
+            </figure>
+            <figure class="hostel_friendship">
+                <img src="images/Hostel_friendship.png">
+                <figcaption class="homes_guests_loves_main_name_hotel">
+                    Hostel Friendship
+                </figcaption>
+                <figcaption class="homes_guests_loves_main_name_place">
+                    Berlin, Germany
+                </figcaption>
+            </figure>
+            <div class="arrow_position">
+                <svg class="arrows_right">
+                    <use href="#arrows_right"/>
+                </svg>
             </div>
         </main>
     </div>
