lesson 9 I fixed some mistakes

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
         </defs>
     </symbol>
 </svg>
-<div class="top_section">
-    <section class="top_section_conteiner">
+<div class="top_wrapper">
+    <section class="top_container">
         <header class="top_section_header col-14 col-md-6">
             <div class="top_section_header_logo">
                 <svg class="logo_trip_house">
@@ -301,7 +301,7 @@
     </section>
 </div>
 <section class="section_what_do_we_offer">
-    <div class="what_do_we_offer_conteiner">
+    <div class="what_do_we_offer_container">
         <header class="what_do_we_offer_header_heading120">
             <h2 class="what_do_we_offer_header_h2 col-md-4"> What do we offer</h2>
         </header>
@@ -334,7 +334,7 @@
     </div>
 </section>
 <section class="homes_guests_loves col-14">
-    <div class="homes_guests_loves_conteiner">
+    <div class="homes_guests_loves_container">
         <header class="homes_guests_loves_header_heading120">
             <h2 class="homes_guests_loves_header_h2 col-md-6">Homes guests loves</h2>
         </header>
@@ -375,8 +375,8 @@
                     Berlin, Germany
                 </figcaption>
             </figure>
-            <div class="arrow_position">
-                <svg class="arrows_right">
+            <div class="arrow_position_right">
+                <svg class="arrow_right">
                     <use href="#arrows_right"/>
                 </svg>
             </div>
@@ -384,7 +384,7 @@
     </div>
 </section>
 <footer>
-    <div class="footer_conteiner">
+    <div class="footer_container">
         <div class="logo_trip_house_for_footer">
             <svg class="logo_for_footer">
                 <use href="#logo_trip_house_for_footer"/>
